whitespace issues

--- a/campus/static/css/home.css
+++ b/campus/static/css/home.css
@@ -357,7 +357,7 @@ a{
 
     #small-text{
         font-size: 3rem;
-        margin-top: -12rem;
+        margin-top: -13rem;
         font-weight: 500;
     }
 
@@ -366,7 +366,7 @@ a{
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        margin-top: 3rem;
+        margin-top: 5rem;
     }
 
     input[type="search"]{
